--- a/src/app/home/games/achievement/achievement.page.html
+++ b/src/app/home/games/achievement/achievement.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
+      <ion-back-button defaultHref="/home/games"></ion-back-button>
     </ion-buttons>
     <ion-title>Achievements for {{ selectedGameTitle }}</ion-title>
   </ion-toolbar>
