--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <ion-app>
+  
   <ion-router-outlet id="main-content"></ion-router-outlet>
   <ion-menu content-id="main-content">
     <ion-header>
@@ -23,4 +24,23 @@
       </ion-list>
     </ion-content>
   </ion-menu>
+
+  <ion-tabs>
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button tab="games" routerLink="/home/games">
+        <ion-icon name="game-controller-outline"></ion-icon>
+        <ion-label>What We Play</ion-label>
+      </ion-tab-button>
+      
+      <ion-tab-button tab="teams" routerLink="/home/teams">
+        <ion-icon name="people-outline"></ion-icon>
+        <ion-label>Who We Are</ion-label>
+      </ion-tab-button>
+  
+      <ion-tab-button tab="schedule" routerLink="/home/schedule">
+        <ion-icon name="calendar-outline"></ion-icon>
+        <ion-label>Our Schedule</ion-label>
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
 </ion-app>
