--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -11,7 +11,7 @@
 <div id="content">
   <div id="frame">
     <ion-avatar id="myAvatar">
-      <ion-img src="https://my.ubaya.ac.id/img/mhs/160323001_m.jpg"></ion-img>
+      <ion-img src="https://i.pinimg.com/474x/e5/91/dc/e591dc82326cc4c86578e3eeecced792.jpg"></ion-img>
     </ion-avatar>
   </div>
 
