--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ion-app>
   
-  <ion-router-outlet id="main-content"></ion-router-outlet>
+  <ion-router-outlet *ngIf="fname" id="main-content"></ion-router-outlet>
   <ion-menu content-id="main-content">
     <ion-header>
       <ion-toolbar>
@@ -25,7 +25,7 @@
     </ion-content>
   </ion-menu>
 
-  <ion-tabs>
+  <ion-tabs *ngIf="fname">
     <ion-tab-bar slot="bottom">
       <ion-tab-button tab="games" routerLink="/home/games">
         <ion-icon name="game-controller-outline"></ion-icon>
@@ -43,4 +43,18 @@
       </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
+
+  <ion-content *ngIf="!fname" class="ion-padding">
+    <img src="https://ubaya.xyz/hybrid/miftah/pasta.jpg" />
+    <ion-card>
+       <ion-item>
+          <ion-input [(ngModel)]="username" label="Username" labelPlacement="floating" />
+       </ion-item>
+       <ion-item>
+          <ion-input [(ngModel)]="password" type="password" label="Password" labelPlacement="floating" />
+       </ion-item>
+       <ion-button expand="block" (click)="login()">Login</ion-button>
+    </ion-card>
+  </ion-content>
+
 </ion-app>
