proposal list masih belum muncul

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
             <ion-img src="https://i.pravatar.cc/300?img=15"></ion-img>
           </ion-item>
           <ion-item>
-            Welcome, 
+            Welcome, {{ fname }} {{ lname }}
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle>
